--- a/cicd/buildspec.yml
+++ b/cicd/buildspec.yml
@@ -1,10 +1,9 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      python: 3.x
-
+  # install:
+  #   runtime-versions:
+  #     python: 3.9
   pre_build:
     commands:
       - cd cicd      # change directory
